--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <div>
             <h2> Ainda dá tempo de garantir o seu, mas corre</h2>
             <div id="img"> 
-                <img src="quinta.svg">
-                <img src="sexta.svg">
-                <img src="sabado.svg">
-                <img src="domingo.svg">
+                <img src="quinta.svg" id="quinta" alt ="">
+                <img src="sexta.svg" id="sexta" alt ="">
+                <img src="sabado.svg" id="sabado" alt ="">
+                <img src="domingo.svg" id="domingo" alt ="">
             </div>
             
         </div>
@@ -65,5 +65,6 @@
 
     </div>
     <script src="script.js"></script>
+    
 </body>
 </html>
