--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
                 </div>
             </div>
              <h2> PARA A MAIOR CCXP DE TODOS OS TEMPOS</h2>
-             <video id="video" controls loop> <source src="Arlequina.mp4" type= "video/mp4"></video>
+             <video id="video" controls loop muted> <source src="Arlequina.mp4" type= "video/mp4"></video>
          </div>
     </section>
     <div id="botton">
         <div>
             <h2> Ainda dá tempo de garantir o seu, mas corre</h2>
             <div id="img"> 
-                <img src="quinta.svg" id="quinta" alt ="">
-                <img src="sexta.svg" id="sexta" alt ="">
-                <img src="sabado.svg" id="sabado" alt ="">
-                <img src="domingo.svg" id="domingo" alt ="">
+                <img src="quinta.svg" onmouseover="highlightCard('quinta')" id="quinta" alt ="">
+                <img src="sexta.svg"  onmouseover="highlightCard('sexta')" id="sexta" alt ="">
+                <img src="sabado.svg"  onmouseover="highlightCard('sabado')" id="sabado" alt ="">
+                <img src="domingo.svg"  onmouseover="highlightCard('domingo')" id="domingo" alt ="">
             </div>
             
         </div>
@@ -65,6 +65,7 @@
 
     </div>
     <script src="script.js"></script>
+    <script src="main.js"></script>
     
 </body>
 </html>
